tests/ui/lifetimes/lifetime-errors/42701_one_named_and_one_anonymous.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/42701_one_named_and_one_anonymous.rs:10:9
   |
LL | fn foo2<'a>(a: &'a Foo, x: &i32) -> &'a i32 {
   |                            ---- help: add explicit lifetime `'a` to the type of `x`: `&'a i32`
...
LL |         &*x
   |         ^^^ lifetime `'a` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
